# AgenticScrum

./: .coverage  .gitignore  .mcp.json  BETA_LAUNCH.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Design.md  EPIC_1.STORY_124-127.md  EPIC_1_STORY_123.md  LAUNCH_ANNOUNCEMENT.md  LICENSE  MANIFEST.in  PRODUCTION_READINESS.md  README.md  RELEASE_NOTES_v1.0.0-beta.4.md  Tutorial.md  dir_tree.txt  download-patch-updates.sh  init.sh  pyproject.toml  requirements-dev.txt  setup.py
.agent-memory/: .gitkeep
agentic_scrum_setup/: __init__.py  cli.py  codebase_analyzer.py  conversational_onboarding.py  organization_setup.py  repository_manager.py  setup_core.py
checklists/: agent_feedback_form.md  retrofit_assessment.md
docs/: AGENT_OPTIMIZATION.md  AGENT_USAGE_CHEATSHEET.md  Anthropic-models.md  CLAUDE_CODE_GUIDE.md  CURL_PATCHING_GUIDE.md  DEVELOPMENT_PROCEDURES.md  FEATURE_MATRIX.md  FEEDBACK_WORKFLOW.md  MCP_API_SETUP.md  MCP_INTEGRATION_GUIDE.md  MCP_MEMORY_ARCHITECTURE.md  PATCH_SYSTEM_IMPROVEMENTS.md  RETROFITTING_GUIDE.md  STORY_TEMPLATE.md  Tutorial.md  models_claude.md
mcp_servers/: README.md
scripts/: agent_memory_utils.py  agentic-patch  animated_ascii_art.py  api_rate_limiter.py  collect_agent_metrics.py  feedback_analyzer.py  generate_ascii_art.py  mcp_manager.py  memory_analyze.py  memory_export.py  memory_prune.py  patch-project-init.sh  quick-banner-update.sh  quick-init-update.sh  quick-install-patcher.sh  quick-security-update.sh  retrofit_project.py  run_background_agent.sh  search_cache_manager.py  test_standalone_patch.py  update-init-sh.py  update_agent_config.py
spec/: Design.md  EPIC_1_STORY_123.md  EPIC_2_CLAUDE_INTEGRATION.md  EPIC_3_MCP_INTEGRATION.md  STORY_206_UPDATE_INIT_SH_CLAUDE.md  STORY_307_PROJECT_LOCATION_DEFAULTS.md  STORY_308_PROJECT_SCOPING_QUESTIONNAIRE.md  STORY_309_PRODUCTION_READINESS_GAPS.md  STORY_310_DATETIME_MCP_SERVICE.md  STORY_311_MCP_DATETIME_TESTING_IMPLEMENTATION.md  STORY_313_PYPI_UPLOAD_BETA_LAUNCH.md  (+22 more)
(+151 files in other folders)
